Projet GL/test/src/test/deca/syntax/invalid/circular_include.res
src/test/deca/syntax/invalid/circular_include.deca:10:32: Circular include for file circular_include.deca
